--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -397,7 +397,7 @@
     <value>Όροι και προϋποθέσεις</value>
   </data>
   <data name="TokenExpiredText" xml:space="preserve">
-    <value>Έχουν απενεργοποιηθεί οι προσβάσεις και δεν μπορεί να δουλέψει η εφαρμογή. Ενεργοποιήστε τις χειροκίνητα και ξανά προσπαθήστε </value>
+    <value>Έχουν απενεργοποιηθεί οι προσβάσεις και δεν μπορεί να δουλέψει η εφαρμογή. Ενεργοποιήστε τις χειροκίνητα και προσπαθήστε ξανά</value>
   </data>
   <data name="TurnOff" xml:space="preserve">
     <value>Δεν συμφωνώ</value>
