First page after login has changed and Text from web added to webview.

--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -270,6 +270,9 @@
   <data name="HomeItemText" xml:space="preserve">
     <value>Αρχή</value>
   </data>
+  <data name="HomeScreenMobileLink" xml:space="preserve">
+    <value>https://asfameazure.blob.core.windows.net/destopesto/docs/homescreenmob.txt</value>
+  </data>
   <data name="HowItWorks" xml:space="preserve">
     <value>Πως λειτουργεί</value>
   </data>
