--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -241,7 +241,7 @@
     <value>Με Facebook</value>
   </data>
   <data name="Fixed" xml:space="preserve">
-    <value>Φτιάχτηκε</value>
+    <value>Έχει αποκατασταθεί αυτό?</value>
   </data>
   <data name="ForgetPasswordText" xml:space="preserve">
     <value>Ξέχασα τον κωδικό μου</value>
