--- a/DestoPesto/DestoPesto/Properties/Resources.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.resx
@@ -465,4 +465,7 @@
   <data name="PendingPhotosToUpload" xml:space="preserve">
     <value>There are still photos to be uploaded. If you close the app now upload will continue next time you start the app</value>
   </data>
+  <data name="WelcomeEmailPasswordLogin" xml:space="preserve">
+    <value>Fill your email and password to login</value>
+  </data>
 </root>
