--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -312,6 +312,9 @@
   <data name="LocationPrompt" xml:space="preserve">
     <value>Η εφαρμογή μαζεύει τα δεδομένα της τοποθεσίας στο παρασκήνιο όταν βγάζετε μία φωτογραφία για να διασφαλιστεί η εγκυρότητα της πληροφορίας. Τα δεδομένα τοποθεσίας αποθηκεύονται για να εμφανίζεται στον χάρτη με καρφίτσα το ακριβές σημείο της φωτογραφίας. </value>
   </data>
+  <data name="LocationServicesOff" xml:space="preserve">
+    <value>Η πρόσβαση στην τοποθεσία είναι απενεργοποιημένη και δεν μπορεί η εφαρμογή να συνεχίσει. Παρακαλώ ενεργοποιήστε την υπηρεσία και προσπαθήσετε ξανά</value>
+  </data>
   <data name="LocationTitle" xml:space="preserve">
     <value>Λήψη τοποθεσίας</value>
   </data>
