Text for location services updated

--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -313,7 +313,7 @@
     <value>Η εφαρμογή μαζεύει τα δεδομένα της τοποθεσίας στο παρασκήνιο όταν βγάζετε μία φωτογραφία για να διασφαλιστεί η εγκυρότητα της πληροφορίας. Τα δεδομένα τοποθεσίας αποθηκεύονται για να εμφανίζεται στον χάρτη με καρφίτσα το ακριβές σημείο της φωτογραφίας. </value>
   </data>
   <data name="LocationServicesOff" xml:space="preserve">
-    <value>Η πρόσβαση στην τοποθεσία είναι απενεργοποιημένη και δεν μπορεί η εφαρμογή να συνεχίσει. Παρακαλώ ενεργοποιήστε την υπηρεσία και προσπαθήσετε ξανά</value>
+    <value>Η υπηρεσία εύρεσης τοποθεσίας δεν είναι ενεργή. Επειδή η λήψη της τοποθεσίας είναι απαραίτητη για την σωστή λειτουργία η εφαρμογή δεν θα δουλέψει. Παρακαλώ ενεργοποιήστε την υπηρεσία τοποθεσίας και προσπαθήσετε ξανά</value>
   </data>
   <data name="LocationTitle" xml:space="preserve">
     <value>Λήψη τοποθεσίας</value>
