Banned account warning

--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -448,7 +448,7 @@
     <value>https://destopesto.gr/info/vision</value>
   </data>
   <data name="WarningForUserBanMessage" xml:space="preserve">
-    <value>Permissions have been disabled and the app will not run. You need to enable permissions manually in order to continue</value>
+    <value>Εάν το πρόβλημα δεν έχει αποκατασταθεί ο λογαριασμός σας θα μπλοκαριστεί και δεν θα μπορείτε για κάποιο χρονικό διάστημα να κάνετε αναφορά επιδιόρθωσης προβλήματων. Θέλετε να συνεχίσετε ?</value>
   </data>
   <data name="WEAK_PASSWORD" xml:space="preserve">
     <value>Αδύναμος κωδικός</value>
