--- a/DestoPesto/DestoPesto/Properties/Resources.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.resx
@@ -472,6 +472,6 @@
     <value>Location Services are not enabled. This is mandatory as the app in order to upload photos needs the get the location from the device. Please enable the service and try again</value>
   </data>
   <data name="WarningForUserBanMessage" xml:space="preserve">
-    <value>Permissions have been disabled and the app will not run. You need to enable permissions manually in order to continue</value>
+    <value>If the defect is not fixed, then your account will be banned for some time, and you won’t be able to change the status of the defects. Do you want to continue?</value>
   </data>
 </root>
