--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -438,6 +438,12 @@
   <data name="UserProfile" xml:space="preserve">
     <value>Προφίλ χρήστη</value>
   </data>
+  <data name="UserProfileText" xml:space="preserve">
+    <value>Προφίλ χρήστη</value>
+  </data>
+  <data name="UserProfileText_2" xml:space="preserve">
+    <value>Συμπλήρωσε τα στοιχεία σου</value>
+  </data>
   <data name="USER_DISABLED" xml:space="preserve">
     <value>Έχει απενεργοποιηθεί ο λογαριασμός. Επικοινωνήστε με τον διαχειριστή</value>
   </data>
