--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -286,7 +286,7 @@
     <value>Αρχή</value>
   </data>
   <data name="HomeScreenMobileLink" xml:space="preserve">
-    <value>https://asfameazure.blob.core.windows.net/destopesto/docs/homescreenmob.txt</value>
+    <value>https://destopesto.blob.core.windows.net/destopesto/docs/homescreenmob.txt</value>
   </data>
   <data name="HowItWorks" xml:space="preserve">
     <value>Πως λειτουργεί</value>
