--- a/DestoPesto/DestoPesto/Properties/Resources.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.resx
@@ -454,7 +454,7 @@
     <value>https://destopesto.gr/info/vision_en</value>
   </data>
   <data name="HomeScreenMobileLink" xml:space="preserve">
-    <value>https://asfameazure.blob.core.windows.net/destopesto/docs/homescreenmob_en.txt</value>
+    <value>https://destopesto.blob.core.windows.net/destopesto/docs/homescreenmob_en.txt</value>
   </data>
   <data name="DeleteAccountInfoText" xml:space="preserve">
     <value>Account deletion can be done by selecting 'Delete account' at the app's menu</value>
