--- a/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
+++ b/DestoPesto/DestoPesto/Properties/Resources.el-GR.resx
@@ -396,6 +396,9 @@
   <data name="PrivacyPolicyLInk" xml:space="preserve">
     <value>https://destopesto.gr/info/PrivacyPolicy</value>
   </data>
+  <data name="RejectedPhotosLabel" xml:space="preserve">
+    <value>Rejected Photos</value>
+  </data>
   <data name="RePasswordPlaceHolder" xml:space="preserve">
     <value>Επανάληψη κωδικού</value>
   </data>
